Setup Glider.js

--- a/index.html
+++ b/index.html
@@ -5,15 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/glider.min.css">
+
     <title>Document</title>
 </head>
 <body>
+    <div class="glider">
+        <div class="glider__item">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga consectetur maxime, provident repellat error, officia fugiat sint veritatis vero eos quos maiores necessitatibus eligendi itaque asperiores. Ipsum dolor similique ad?</p>
+        </div>
+        <div class="glider__item">
+            <p>Incidunt mollitia, est et repudiandae atque consectetur praesentium odit iusto! Rem quo possimus, minus ab facere sint commodi doloribus iusto, quis debitis ipsam nam incidunt autem illum. Est, quae deleniti?</p>
+        </div>
+        <div class="glider__item">
+            <p>Magni accusamus ipsum optio voluptatem ducimus! Culpa expedita iure consequuntur minus impedit veniam accusantium nostrum ducimus inventore amet maxime praesentium ea accusamus ab soluta, quam atque! Odit, voluptate! Quod, vero?</p>
+        </div>
+        <div class="glider__item">
+            <p>Modi sint, fuga voluptate cupiditate sequi error voluptas nesciunt alias architecto aspernatur libero ab repellat temporibus explicabo reprehenderit animi beatae eaque asperiores harum rerum consequatur. Velit repellat dolor temporibus accusantium.</p>
+        </div>
+        <div class="glider__item">
+            <p>Repellendus porro architecto quaerat necessitatibus, laboriosam laborum vitae earum asperiores illum eligendi, provident ipsa dicta hic ea. In dolorum omnis esse officia consectetur, officiis culpa. A eaque aperiam consequatur? Doloribus.</p>
+        </div>
+        <div class="glider__item">
+            <p>Omnis, nostrum expedita fugiat ullam impedit, consequatur natus cum incidunt nobis ipsum nisi quo dicta sed et nemo! Vel nobis aut quis expedita! Sit ab alias perferendis, dignissimos ut beatae?</p>
+        </div>
+        <div class="glider__item">
+            <p>Sit ut quibusdam aliquid eligendi vero incidunt natus fugit deleniti sequi voluptatum assumenda ipsam enim, vitae suscipit cupiditate pariatur quia ipsum provident corporis illum molestias. Adipisci perspiciatis facilis porro a.</p>
+        </div>
+        <div class="glider__item">
+            <p>Qui earum similique quisquam mollitia delectus! Adipisci unde esse quidem aut reiciendis illum ullam nobis, culpa eius. Numquam illum repellat eveniet delectus, voluptatem facere placeat tenetur beatae totam ipsa inventore.</p>
+        </div>
+        <div class="glider__item">
+            <p>Et qui dolor corrupti enim at. Aspernatur iusto, sapiente atque eaque ipsum placeat quod, velit aliquam doloremque nemo eos enim veritatis nulla aut. Magnam, corporis voluptas quis optio temporibus iure.</p>
+        </div>
+        <div class="glider__item">
+            <p>Debitis tempora quo inventore repudiandae voluptas doloribus tenetur. Dicta maiores, veritatis ea doloribus, asperiores repellat, quos ipsam aut ad dolorum in quasi? Animi fugiat cupiditate quo distinctio nemo quos nulla.</p>
+        </div>
+    </div>
+
+
+
+
     
-
-
-
-    
-    <script src="./js/glider.js"></script>
+    <script src="./js/glider.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
