Staging for real work.

--- a/index.html
+++ b/index.html
@@ -9,44 +9,50 @@
 
     <title>Document</title>
 </head>
-<body>
-    <div class="glider">
-        <div class="glider__item">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga consectetur maxime, provident repellat error, officia fugiat sint veritatis vero eos quos maiores necessitatibus eligendi itaque asperiores. Ipsum dolor similique ad?</p>
+
+<div class="glider-container">
+        <div class="glider">
+            <div class="glider__item">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita reiciendis possimus beatae quas tempora ut sed sunt quod, molestias alias. Ex magnam vel qui sunt molestias hic rem numquam ad!</p>
+            </div>
+            <div class="glider__item">
+                <p>Mollitia, dolore minus? Numquam expedita dolorum eligendi natus repellat. Totam quo sapiente minus soluta ab quasi enim. Vel quis aliquam iusto maiores libero tenetur tempora impedit totam numquam beatae. Praesentium.</p>
+            </div>
+            <div class="glider__item">
+                <p>Sint, cumque vitae! Possimus temporibus omnis consectetur nemo autem deleniti doloremque necessitatibus suscipit iusto laudantium, dicta distinctio consequuntur aut error numquam molestias ex. Architecto corporis modi soluta, ipsam minus vitae.</p>
+            </div>
+            <div class="glider__item">
+                <p>Inventore esse perferendis earum voluptas quos exercitationem sunt laboriosam, odit dolorem accusantium nihil, aut ratione pariatur. Animi molestias reprehenderit eveniet quos quo consectetur corporis doloribus cum, quidem illo vero officiis?</p>
+            </div>
+            <div class="glider__item">
+                <p>Quibusdam minima reiciendis labore optio nesciunt voluptatum dignissimos modi, et delectus, consequuntur blanditiis unde architecto cumque maiores. Sapiente aliquid, debitis nulla molestias odio quos voluptatem facere nisi, reiciendis aspernatur unde.</p>
+            </div>
+            <div class="glider__item">
+                <p>Accusamus, eum nobis explicabo enim, iste ratione commodi odit non error sit amet vitae, dolore repellendus quis fuga et voluptatum veniam exercitationem nisi aperiam neque in recusandae earum? Dolor, ipsam.</p>
+            </div>
+            <div class="glider__item">
+                <p>Assumenda eaque facere molestias cumque, non, fuga blanditiis nesciunt impedit ipsum qui quam consectetur ducimus porro eos illo eius cum harum quasi maiores molestiae explicabo nulla, fugiat quis vero! Ea?</p>
+            </div>
+            <div class="glider__item">
+                <p>Voluptate ratione eaque illo sed, voluptas iusto veritatis animi quo eos itaque adipisci iste enim in perferendis accusamus consequuntur unde aliquid similique vero non cupiditate possimus nesciunt nulla rem. Error?</p>
+            </div>
+            <div class="glider__item">
+                <p>Ex fuga, ratione magni quis fugit praesentium excepturi nulla culpa atque nemo. Inventore quod temporibus labore impedit, odio quisquam omnis exercitationem eveniet officia doloremque quibusdam quae obcaecati neque asperiores reiciendis!</p>
+            </div>
+            <div class="glider__item">
+                <p>Odio totam adipisci vero harum ratione! Sunt, natus! Dolor quia omnis esse quam, fuga modi nemo perspiciatis reiciendis ipsum dolorem! Asperiores nisi quos nam! Natus earum expedita quas hic iusto.</p>
+            </div>
         </div>
-        <div class="glider__item">
-            <p>Incidunt mollitia, est et repudiandae atque consectetur praesentium odit iusto! Rem quo possimus, minus ab facere sint commodi doloribus iusto, quis debitis ipsam nam incidunt autem illum. Est, quae deleniti?</p>
-        </div>
-        <div class="glider__item">
-            <p>Magni accusamus ipsum optio voluptatem ducimus! Culpa expedita iure consequuntur minus impedit veniam accusantium nostrum ducimus inventore amet maxime praesentium ea accusamus ab soluta, quam atque! Odit, voluptate! Quod, vero?</p>
-        </div>
-        <div class="glider__item">
-            <p>Modi sint, fuga voluptate cupiditate sequi error voluptas nesciunt alias architecto aspernatur libero ab repellat temporibus explicabo reprehenderit animi beatae eaque asperiores harum rerum consequatur. Velit repellat dolor temporibus accusantium.</p>
-        </div>
-        <div class="glider__item">
-            <p>Repellendus porro architecto quaerat necessitatibus, laboriosam laborum vitae earum asperiores illum eligendi, provident ipsa dicta hic ea. In dolorum omnis esse officia consectetur, officiis culpa. A eaque aperiam consequatur? Doloribus.</p>
-        </div>
-        <div class="glider__item">
-            <p>Omnis, nostrum expedita fugiat ullam impedit, consequatur natus cum incidunt nobis ipsum nisi quo dicta sed et nemo! Vel nobis aut quis expedita! Sit ab alias perferendis, dignissimos ut beatae?</p>
-        </div>
-        <div class="glider__item">
-            <p>Sit ut quibusdam aliquid eligendi vero incidunt natus fugit deleniti sequi voluptatum assumenda ipsam enim, vitae suscipit cupiditate pariatur quia ipsum provident corporis illum molestias. Adipisci perspiciatis facilis porro a.</p>
-        </div>
-        <div class="glider__item">
-            <p>Qui earum similique quisquam mollitia delectus! Adipisci unde esse quidem aut reiciendis illum ullam nobis, culpa eius. Numquam illum repellat eveniet delectus, voluptatem facere placeat tenetur beatae totam ipsa inventore.</p>
-        </div>
-        <div class="glider__item">
-            <p>Et qui dolor corrupti enim at. Aspernatur iusto, sapiente atque eaque ipsum placeat quod, velit aliquam doloremque nemo eos enim veritatis nulla aut. Magnam, corporis voluptas quis optio temporibus iure.</p>
-        </div>
-        <div class="glider__item">
-            <p>Debitis tempora quo inventore repudiandae voluptas doloribus tenetur. Dicta maiores, veritatis ea doloribus, asperiores repellat, quos ipsam aut ad dolorum in quasi? Animi fugiat cupiditate quo distinctio nemo quos nulla.</p>
-        </div>
-    </div>
+
+
+            <button class="glider__prev glider__button"><</button>
+            <button class="glider__next glider__button">></button>
+</div>
 
 
 
 
-    
+
     <script src="./js/glider.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
