--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,44 +9,25 @@
 
     <title>Document</title>
 </head>
+<body>
 
 <div class="glider-container">
         <div class="glider">
             <div class="glider__item">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita reiciendis possimus beatae quas tempora ut sed sunt quod, molestias alias. Ex magnam vel qui sunt molestias hic rem numquam ad!</p>
+                <p>1</p>
             </div>
             <div class="glider__item">
-                <p>Mollitia, dolore minus? Numquam expedita dolorum eligendi natus repellat. Totam quo sapiente minus soluta ab quasi enim. Vel quis aliquam iusto maiores libero tenetur tempora impedit totam numquam beatae. Praesentium.</p>
+                <p>2</p>
             </div>
             <div class="glider__item">
-                <p>Sint, cumque vitae! Possimus temporibus omnis consectetur nemo autem deleniti doloremque necessitatibus suscipit iusto laudantium, dicta distinctio consequuntur aut error numquam molestias ex. Architecto corporis modi soluta, ipsam minus vitae.</p>
+                <p>3</p>
             </div>
             <div class="glider__item">
-                <p>Inventore esse perferendis earum voluptas quos exercitationem sunt laboriosam, odit dolorem accusantium nihil, aut ratione pariatur. Animi molestias reprehenderit eveniet quos quo consectetur corporis doloribus cum, quidem illo vero officiis?</p>
-            </div>
-            <div class="glider__item">
-                <p>Quibusdam minima reiciendis labore optio nesciunt voluptatum dignissimos modi, et delectus, consequuntur blanditiis unde architecto cumque maiores. Sapiente aliquid, debitis nulla molestias odio quos voluptatem facere nisi, reiciendis aspernatur unde.</p>
-            </div>
-            <div class="glider__item">
-                <p>Accusamus, eum nobis explicabo enim, iste ratione commodi odit non error sit amet vitae, dolore repellendus quis fuga et voluptatum veniam exercitationem nisi aperiam neque in recusandae earum? Dolor, ipsam.</p>
-            </div>
-            <div class="glider__item">
-                <p>Assumenda eaque facere molestias cumque, non, fuga blanditiis nesciunt impedit ipsum qui quam consectetur ducimus porro eos illo eius cum harum quasi maiores molestiae explicabo nulla, fugiat quis vero! Ea?</p>
-            </div>
-            <div class="glider__item">
-                <p>Voluptate ratione eaque illo sed, voluptas iusto veritatis animi quo eos itaque adipisci iste enim in perferendis accusamus consequuntur unde aliquid similique vero non cupiditate possimus nesciunt nulla rem. Error?</p>
-            </div>
-            <div class="glider__item">
-                <p>Ex fuga, ratione magni quis fugit praesentium excepturi nulla culpa atque nemo. Inventore quod temporibus labore impedit, odio quisquam omnis exercitationem eveniet officia doloremque quibusdam quae obcaecati neque asperiores reiciendis!</p>
-            </div>
-            <div class="glider__item">
-                <p>Odio totam adipisci vero harum ratione! Sunt, natus! Dolor quia omnis esse quam, fuga modi nemo perspiciatis reiciendis ipsum dolorem! Asperiores nisi quos nam! Natus earum expedita quas hic iusto.</p>
-            </div>
+                    <p>4</p>
+                </div>
         </div>
-
-
-            <button class="glider__prev glider__button"><</button>
-            <button class="glider__next glider__button">></button>
+        <button class="glider__prev glider__button"><</button>
+        <button class="glider__next glider__button">></button>
 </div>
 
 
