Languge button is added.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,11 @@
     <title>Document</title>
 </head>
 <body>
+<section class="topbar">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At architecto similique reprehenderit aliquid, nemo voluptas qui sit labore eos. Nisi, veniam magnam. Nisi illum, et numquam quibusdam fugiat ducimus rem!</p>
+    <button class="tahir-lang-button">Arabic</button>
+</section>
+
 
 <div class="glider-container">
         <div class="glider">
