calling it a day!

--- a/index.html
+++ b/index.html
@@ -10,10 +10,25 @@
     <title>Document</title>
 </head>
 <body>
+
 <section class="topbar">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At architecto similique reprehenderit aliquid, nemo voluptas qui sit labore eos. Nisi, veniam magnam. Nisi illum, et numquam quibusdam fugiat ducimus rem!</p>
-    <button class="tahir-lang-button">Arabic</button>
+    <div class="topbar__left">
+        <div class="topbar__svg"></div>
+        <div class="topbar__svg"></div>
+        <div class="topbar__svg"></div>
+        <div class="topbar__svg"></div>
+        <div class="topbar__svg"></div>
+        <div class="topbar__svg"></div>
+    </div>
+    <div class="topbar__right">
+        <a href="" class="topbar__link">My Account</a>
+        <a href="" class="topbar__link">Shopping Cart</a>
+        <a href="" class="topbar__link">Checkout</a>
+        <a href="" class="topbar__link">Wishlist</a>
+        <button class="tahir-lang-button">Arabic</button>
+    </div>
 </section>
+
 
 
 <div class="glider-container">
