--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/glider.min.css">
 
+    <script src="https://kit.fontawesome.com/cccb95d6c6.js"></script>
     <title>Document</title>
 </head>
 <body>
 
 <section class="topbar">
     <div class="topbar__left">
-        <div class="topbar__svg"></div>
-        <div class="topbar__svg"></div>
-        <div class="topbar__svg"></div>
-        <div class="topbar__svg"></div>
-        <div class="topbar__svg"></div>
-        <div class="topbar__svg"></div>
+        <div class="topbar__svg"><i class="fab fa-facebook-square"></i></div>
+        <div class="topbar__svg"><i class="fab fa-instagram"></i></div>
+        <div class="topbar__svg"><i class="fab fa-pinterest-square"></i></div>
+        <div class="topbar__svg"><i class="fab fa-twitter-square"></i></div>
+        <div class="topbar__svg"><i class="fab fa-youtube-square"></i></div>
+        <div class="topbar__svg"><i class="fab fa-whatsapp-square"></i></div>
     </div>
     <div class="topbar__right">
         <a href="" class="topbar__link">My Account</a>
@@ -29,9 +30,34 @@
     </div>
 </section>
 
+<section class="logobar">
+    <figure class="logo-container">
+        <img src="./assets/logo.png" alt="" class="logo">
+    </figure>
+
+    <form action="#" class="search">
+        <input type="text" class="search__input" placeholder="Search Products">
+        <button class="search__button"><i class="fas fa-search"></i></button>
+    </form>
+
+    <div class="logobar-link-container">
+        <a href="#" class="logobar-link-container__link">SIGN IN</a>
+        <a href="#" class="logobar-link-container__link">عربى</a>
+        <div class="logobar__currency-container">
+            <span>UAE Dirham</span>
+        </div>
+        
+    </div>
+
+    <button class="cart">
+        <i class="fas fa-shopping-cart"></i>
+        256$
+    </button>
+</section>
 
 
-<div class="glider-container">
+
+<!-- <div class="glider-container">
         <div class="glider">
             <div class="glider__item">
                 <p>1</p>
@@ -48,9 +74,16 @@
         </div>
         <button class="glider__prev glider__button"><</button>
         <button class="glider__next glider__button">></button>
-</div>
+</div> -->
 
 
+<section class="test-para-container">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum veniam nam animi. Voluptates, dignissimos necessitatibus. Maiores modi temporibus sapiente quidem explicabo soluta neque magnam distinctio! Vel tempora dignissimos aspernatur sed?</p>
+    <p>Consequuntur, tempore suscipit? Dignissimos ullam tempora eveniet eligendi cupiditate architecto sint magni mollitia voluptatibus. Beatae molestias consectetur nihil iusto earum consequatur magnam, magni saepe, modi dolore, quaerat placeat animi quisquam?</p>
+    <p>Architecto laboriosam enim eius consectetur ipsa fuga. Vel sequi eum omnis eos. Repudiandae laborum debitis id minima eveniet, earum recusandae exercitationem, illo sapiente neque magnam iure veniam alias ex aliquam?</p>
+    <p>Similique inventore quasi mollitia ipsa, voluptatem iste neque nulla dignissimos, eos dicta eum! Magnam possimus, qui rerum vero quos repudiandae molestiae earum autem eaque necessitatibus ea ipsum nostrum soluta distinctio?</p>
+    <p>Alias porro deleniti voluptatum dignissimos perspiciatis unde laboriosam similique dolorem. Aperiam recusandae tempore minima at accusantium ipsa itaque deserunt unde pariatur debitis, ea praesentium est vel reprehenderit doloribus molestias placeat.</p>
+</section>
 
 
 
