call it a second day!

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/glider.min.css">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/main.css">
     <script src="https://kit.fontawesome.com/cccb95d6c6.js"></script>
     <title>Document</title>
 </head>
@@ -46,6 +47,7 @@
         <div class="logobar__currency-container">
             <span>UAE Dirham</span>
         </div>
+
         
     </div>
 
@@ -54,6 +56,129 @@
         256$
     </button>
 </section>
+
+<section class="mainnav">
+    <ul class="cool">
+        <li>
+            Women
+            <div class="dropdown mainnav__dropdown mainnav__dropdown__women test-open">
+                <span class="transparent-margin"></span>
+                <div class="dropdown__content">
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <a href="" class="view-all-button"><strong>View all women's</strong></a>
+                            <a href="" class="new_collection_button desk-hot-link-button">New Collection</a>
+                            <a href="" class="on-sale-button desk-hot-link-button">On Sale</a>
+                            <a href="" class="on-sale-button desk-hot-link-button">Custom Emboridery</a>
+                            <div class="desk-menu-link-group">
+                                <h3 class="desk-menu-link-group__heading"><strong>Lab coats & Jackets</strong></h3>
+                                <hr>
+                                <a href="" class="desk-menu-link-group__link">Jackets</a>
+                                <a href="" class="desk-menu-link-group__link">Long Lab coats</a>
+                                <a href="" class="desk-menu-link-group__link  bottom-link">Short Lab coats</a>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <h3 class="desk-menu-link-group__heading"><strong>Scrubs</strong></h3>
+                            <hr>
+                            <a href="" class="desk-menu-link-group__link">Scrub Sets</a>
+                            <a href="" class="desk-menu-link-group__link">Solid Scrub Tops</a>
+                            <a href="" class="desk-menu-link-group__link">Printed Scrub Tops</a>
+                            <a href="" class="desk-menu-link-group__link">Scrub Pants</a>
+                            <a href="" class="desk-menu-link-group__link">Tees & Underscrubs</a>
+                            <a href="" class="desk-menu-link-group__link bottom-link">Scrub caps & Hats</a>
+
+
+                            <h3 class="desk-menu-link-group__heading"><strong>More</strong></h3>
+                            <hr>
+                            <a href="" class="desk-menu-link-group__link">Shoes & Clogs</a>
+                            <a href="" class="desk-menu-link-group__link">Medical Jewellery</a>
+                        </div>
+                        <div class="col-sm-3">
+                            <h3 class="desk-menu-link-group__heading"><strong>Shop by brands</strong></h3>
+                            <hr>
+                            <a href="" class="desk-menu-link-group__link">Adar</a>
+                            <a href="" class="desk-menu-link-group__link">Solid Scrub Tops</a>
+                            <a href="" class="desk-menu-link-group__link">Printed Scrub Tops</a>
+                            <a href="" class="desk-menu-link-group__link">Scrub Pants</a>
+                            <a href="" class="desk-menu-link-group__link">Tees & Underscrubs</a>
+                            <a href="" class="desk-menu-link-group__link bottom-link">Scrub caps & Hats</a>
+                        </div>
+                        <div class="col-sm-3">
+                            <h3 class="desk-menu-link-group__heading"><strong>Shop by colors</strong></h3>
+                            <hr>
+                            <a href="" class="desk-menu-link-group__link"><span class="shop-by-colors red"></span>Red</a>
+                            <a href="" class="desk-menu-link-group__link"><span class="shop-by-colors green"></span>Green</a>
+                            <a href="" class="desk-menu-link-group__link"><span class="shop-by-colors blue"></span>Blue</a>
+                            <a href="" class="desk-menu-link-group__link"><span class="shop-by-colors yellow"></span>Yellow</a>
+                            <a href="" class="desk-menu-link-group__link view-more-shopby-colors">More colors  ...</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </li> 
+        <li>
+            Men
+            <div class="dropdown mainnav__dropdown mainnav__dropdown__men">
+                    <span class="transparent-margin"></span>
+                    <div class="dropdown__content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam porro fugiat perferendis labore quae, deserunt magnam, pariatur aspernatur dolore inventore vel! Aspernatur mollitia ab rem odit deleniti soluta dolorem ad?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque voluptate minima porro excepturi dolorum debitis dolor commodi dolore, vitae libero non temporibus. Dolor nihil obcaecati temporibus dolores, perspiciatis quisquam reprehenderit.
+                    </div>
+           </div>
+        </li>
+        <li>
+            Lab coats
+            <div class="dropdown mainnav__dropdown mainnav__dropdown__labcoat">
+                    <span class="transparent-margin"></span>
+                    <div class="dropdown__content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam porro fugiat perferendis labore quae, deserunt magnam, pariatur aspernatur dolore inventore vel! Aspernatur mollitia ab rem odit deleniti soluta dolorem ad?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque voluptate minima porro excepturi dolorum debitis dolor commodi dolore, vitae libero non temporibus. Dolor nihil obcaecati temporibus dolores, perspiciatis quisquam reprehenderit.
+                    </div>
+            </div>
+        </li>
+        <li>
+            Shoes
+            <div class="dropdown mainnav__dropdown mainnav__dropdown__shoes">
+                    <span class="transparent-margin"></span>
+                    <div class="dropdown__content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam porro fugiat perferendis labore quae, deserunt magnam, pariatur aspernatur dolore inventore vel! Aspernatur mollitia ab rem odit deleniti soluta dolorem ad?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque voluptate minima porro excepturi dolorum debitis dolor commodi dolore, vitae libero non temporibus. Dolor nihil obcaecati temporibus dolores, perspiciatis quisquam reprehenderit.
+                    </div>
+            </div>
+        </li>
+        <li>
+            Medical devices
+            <div class="dropdown mainnav__dropdown mainnav__dropdown__device">
+                    <span class="transparent-margin"></span>
+                    <div class="dropdown__content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam porro fugiat perferendis labore quae, deserunt magnam, pariatur aspernatur dolore inventore vel! Aspernatur mollitia ab rem odit deleniti soluta dolorem ad?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque voluptate minima porro excepturi dolorum debitis dolor commodi dolore, vitae libero non temporibus. Dolor nihil obcaecati temporibus dolores, perspiciatis quisquam reprehenderit.
+                    </div>
+            </div>
+        </li>
+        <li>
+            Accessories
+            <div class="dropdown mainnav__dropdown mainnav__dropdown__accessory">
+                    <span class="transparent-margin"></span>
+                    <div class="dropdown__content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam porro fugiat perferendis labore quae, deserunt magnam, pariatur aspernatur dolore inventore vel! Aspernatur mollitia ab rem odit deleniti soluta dolorem ad?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque voluptate minima porro excepturi dolorum debitis dolor commodi dolore, vitae libero non temporibus. Dolor nihil obcaecati temporibus dolores, perspiciatis quisquam reprehenderit.
+                    </div>
+            </div>
+        </li>
+        <!-- <li>
+            <a href="" class="mainnav__link"></a>
+            <div class="dropdown mainnav__dropdown"></div>
+        </li>
+        <li>
+            <a href="" class="mainnav__link"></a>
+            <div class="dropdown mainnav__dropdown"></div>
+        </li> -->
+    </ul>
+</section>
+
+
 
 
 
@@ -76,18 +201,22 @@
         <button class="glider__next glider__button">></button>
 </div> -->
 
-
+<!-- 
 <section class="test-para-container">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum veniam nam animi. Voluptates, dignissimos necessitatibus. Maiores modi temporibus sapiente quidem explicabo soluta neque magnam distinctio! Vel tempora dignissimos aspernatur sed?</p>
     <p>Consequuntur, tempore suscipit? Dignissimos ullam tempora eveniet eligendi cupiditate architecto sint magni mollitia voluptatibus. Beatae molestias consectetur nihil iusto earum consequatur magnam, magni saepe, modi dolore, quaerat placeat animi quisquam?</p>
     <p>Architecto laboriosam enim eius consectetur ipsa fuga. Vel sequi eum omnis eos. Repudiandae laborum debitis id minima eveniet, earum recusandae exercitationem, illo sapiente neque magnam iure veniam alias ex aliquam?</p>
     <p>Similique inventore quasi mollitia ipsa, voluptatem iste neque nulla dignissimos, eos dicta eum! Magnam possimus, qui rerum vero quos repudiandae molestiae earum autem eaque necessitatibus ea ipsum nostrum soluta distinctio?</p>
     <p>Alias porro deleniti voluptatum dignissimos perspiciatis unde laboriosam similique dolorem. Aperiam recusandae tempore minima at accusantium ipsa itaque deserunt unde pariatur debitis, ea praesentium est vel reprehenderit doloribus molestias placeat.</p>
-</section>
+</section> -->
 
 
 
     <script src="./js/glider.min.js"></script>
     <script src="./js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </body>
 </html>
